<resources>
    <string name="app_name">Presence barCode</string>
    <string name="fullscreen_mode">Colocar em modo fullscreen</string>
    <string name="turn_on_flash">Ligar flash</string>
    <string name="lock_code_reader">Travar leitura de barra de código</string>
    <string name="info">Informação</string>
    <string name="info_description">Posicione a câmera corretamente sobre o código para que a leitura seja realizada.</string>
    <string name="last_content_read">Conteúdo da última leitura:</string>
    <string name="nothing_read">Nada lido ainda</string>
    <string name="barcode_format">Tipo barra de código: </string>
    <string name="clear_content_read">Limpar área de conteúdo lido</string>
    <string name="open_url">ABRIR URL</string>
    <string name="close_fullscreen_mode">Sair de modo fullscreen</string>
    <string name="open_email">ABRIR EMAIL</string>
    <string name="open_call">LIGAR</string>
    <string name="request_permission_description">A permissão de uso de camera é necessária para que o aplicativo funcione.</string>
    <string name="request_permission_button_ok">Ok</string>
    <string name="request_permission_button_cancel">Cancelar</string>
    <string name="unrecognized_code">Código não reconhecido.</string>
    <string name="next_bar_code">Aguardando próxima leitura</string>
    <string name="all_readers">Lista de matriculas lidas</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="solicitar_horario">Solicitar</string>
    <string name="hr_list">Horario</string>


</resources>
